# RTT_HMI_LVGL_demo

./: README.md
projects/rt_lvgl_demo/: .cproject  .gitignore  CMakeLists.txt  rtconfig.h  rtconfig.py  rtconfig_preinc.h
projects/rt_lvgl_demo/app/: lv_main.c
projects/rt_lvgl_demo/app/file_explorer/: lv_file_explorer.c
projects/rt_lvgl_demo/app/gui/: gui_maker.c  gui_maker.h  gui_page_mgmt.c  setup_scr_boot.c
projects/rt_lvgl_demo/app/page_manager/: anima.c  anima.h  page_mgmt.c  page_mgmt.h  pm_utils.c
projects/rt_lvgl_demo/app/video/: lv_demo_video.h  ui_helpers.c
projects/rt_lvgl_demo/app/video/img/: file_icon.c
projects/rt_lvgl_demo/board/lvgl/: lv_conf.h  lv_port_disp.c  lv_port_indev.c
projects/rt_lvgl_demo/board/lvgl/demo/file_explorer/: lv_file_explorer.h
projects/rt_lvgl_demo/board/lvgl/demo/video/: lv_demo_video.c
projects/rt_lvgl_demo/board/ports/: can_test.c  drv_g2d.c  drv_jpeg.c  drv_jpeg.h  gpio_cfg.h  lcd_port.h  mnt.c
projects/rt_lvgl_demo/board/ports/audio/: pwm_audio.c  pwm_audio.h
projects/rt_lvgl_demo/board/ports/avi/: avi_def.h  avifile.c  avifile.h
projects/rt_lvgl_demo/board/ports/avi/player/: player.c  player.h
projects/rt_lvgl_demo/board/ports/touch/gt911/src/: gt911.c
projects/rt_lvgl_demo/board/ports/wifi/: drv_rw007.c
projects/rt_lvgl_demo/buildwork/cmake_build/: .astylerc  .gitignore  CMakeLists.txt  ld-script  ra_cfg  rt-thread  rtconfig.h
projects/rt_lvgl_demo/buildwork/cmake_build/cmakelib/: build_doxygen.cmake  c-standards.cmake  formatting.cmake
projects/rt_lvgl_demo/buildwork/cmake_build/scripts/: build_docs.sh  flash.sh
projects/rt_lvgl_demo/buildwork/qemu-vexpress-a9_build/: .config  SConstruct  rtconfig.h
projects/rt_lvgl_demo/buildwork/qemu-vexpress-a9_build/applications/lvgl/: lv_conf.h  lv_port_disp.c  lv_port_indev.c  mouse_cursor_icon.c
projects/rt_lvgl_demo/buildwork/scons_build/: .config  .cproject  .gitignore  .project  board  ra  ra_gen  rtconfig.py
projects/rt_lvgl_demo/docs/: demo.md  docs.md.example  doxygenSetup.md
projects/rt_lvgl_demo/docs/doxygen/: DoxyLayout.xml  Doxyfile.example  Doxyfile.in
projects/rt_lvgl_demo/docs/doxygen/theme/: footer.html  header.html
projects/rt_lvgl_demo/scripts/: astyle-code-format.py  generate_version.sh
